increased margin-bottom for note-holder to 45px for now so no overlapping of notes. Not sure though if google font load is working correctly

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -235,13 +235,15 @@ body {
 
 .notes-holder {
     margin-top: 30px;
+
     @media(min-width: 600px) {
         margin-left: 40px;
     }
+
     .note-holder {
         max-width: 320px;
         background-color: white;
-        margin-bottom: 30px;
+        margin-bottom: 45px;
         word-wrap: break-word;
         text-decoration: none;
         color: black;
